<resources>
    <string name="app_name">Cantinho De Coracao</string>
    <string name="original_app_name">CantinhoDeCoracao</string>

    <!-- MainActivity -->
    <string name="login">Login</string>
    <string name="email_login_label">E-mail</string>
    <string name="email_login_input">e-mail</string>

    <string name="senha_login_label">Senha</string>
    <string name="forgotem_confirm_label">Confirmar</string>
    <string name="forgotem_confirm_input">confirmar</string>
    <string name="senha_login_input">senha</string>

    <string name="forgotem_login_label"><a href="">esqueci a senha</a></string>

    <string name="back_button">Voltar</string>
    <string name="login_button">Entrar</string>
    <string name="forgotem_email_button">Solicitar</string>
    <string name="code_forgotem_label">Código</string>
    <string name="code_forgotem_input">código</string>
    <string name="code_forgotem_button">Verificar</string>
    <string name="confirm_forgotem_button">Alterar</string>


    <string name="client_text_view">Cliente</string>
    <string name="client_information_view">Cadastro, alteração, visualização, tudo que possa influir diretamente no registro do cliente.</string>

    <string name="localization_text_view">Localização</string>
    <string name="localization_information_view">Cadastro, alteração, visualização, tudo que possa influir diretamente no registro da localização.</string>

    <string name="contact_text_view">Contato</string>
    <string name="contact_information_view">Cadastro, alteração, visualização, tudo que possa influir diretamente no registro do contato.</string>

    <string name="event_text_view">Evento</string>
    <string name="event_information_view">Cadastro, alteração, visualização, tudo que possa influir diretamente no registro do Evento.</string>

    <string name="inventory_text_view">Inventario</string>
    <string name="inventory_information_view">Cadastro, alteração, visualização, tudo que possa influir diretamente no registro do inventario.</string>

    <string name="financial_text_view">Financeiro</string>
    <string name="financial_information_view">Cadastro, alteração, visualização, tudo que possa influir diretamente no registro do financeiro.</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_page">PageActivity</string>
</resources>