<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_login_label"
            app:layout_constraintHorizontal_bias="0.498" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/login_view"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:gravity="center"
                android:hint="@string/email_login_input"
                android:inputType="textPassword"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/senha_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/senha_login_label"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/senha_view"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSenha"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:gravity="center"
                android:hint="@string/senha_login_input"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotem_password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgotem_login_label"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button"
            app:layout_constraintTop_toBottomOf="@+id/forgotem_password_view" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>