<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/forgotem_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/email_login_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgotem_email_view"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_login_input"
                android:gravity="center"
                android:inputType="textPassword"
                android:background="#ffff"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/forgotem_email_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/forgotem_email_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgotem_email_button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>