<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_client"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/client_image_view"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/client_svg" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/client_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/client_text_view"
                        android:textColor="#ffffff"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/client_information_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/client_information_view"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_location"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/location_image_view"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/location_svg" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/location_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/localization_text_view"
                        android:textColor="#ffffff"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/location_information_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/localization_information_view"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_contact"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/contact_image_view"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/contact_svg" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/contact_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/contact_text_view"
                        android:textColor="#ffffff"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/contact_information_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/contact_information_view"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_event"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/events_image_view"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/event_svg" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/events_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/event_text_view"
                        android:textColor="#ffffff"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/events_information_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/event_information_view"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_inventory"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/inventory_image_view"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/inventory_svg" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/inventory_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/inventory_text_view"
                        android:textColor="#ffffff"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/inventory_information_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/inventory_information_view"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_financial"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/financial_image_view"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/financial_svg" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/financial_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/financial_text_view"
                        android:textColor="#ffffff"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/financial_information_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/financial_information_view"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>